<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="42dp"
    android:layout_marginRight="42dp"
    android:background="@drawable/shape_card_bg"
    android:padding="16dp">

    <ImageView
        android:id="@+id/dialog_iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/dialog_close"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_iv_close"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:text="@string/dialog_walletcreate_tip_title"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:text="@string/dialog_walletcreate_tip_info"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wechatpublic_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:text="@string/dialog_walletcreate_tip_cancel"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/wechatpublic_btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:paddingBottom="6dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="6dp"
                android:text="@string/dialog_walletcreate_tip_confirm"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>