<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_gray"
    android:orientation="vertical">

    <include layout="@layout/common_titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimens_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backupprikey_tip"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_16"
            android:background="@color/txt_color_gray"
            android:orientation="vertical"
            android:padding="@dimen/dimens_16">

            <TextView
                android:id="@+id/backupprikey_tv_prikey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingTop="@dimen/dimens_16"
                android:paddingLeft="@dimen/dimens_16"
                android:layout_gravity="right"
                android:textColor="@color/theme_color"
                android:id="@+id/backupprikey_tv_copy"
                android:text="@string/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <Button
            android:id="@+id/backupprikey_btn_finish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_48"
            android:layout_marginTop="@dimen/dimens_16"
            android:background="@color/theme_color"
            android:text="@string/backupprikey_copy_finish"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>