<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray_background"
    android:orientation="vertical">

    <include layout="@layout/common_titlebar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimens_16"
        android:text="@string/wallet_address"
        android:textColor="@color/txt_color_gray"
        android:textSize="@dimen/dimens_12" />

    <TextView
        android:id="@+id/walletaddr_tv_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimens_16"
        android:text="@string/wallet_address"
        android:textColor="@color/theme_color" />

    <TextView
        android:id="@+id/walletaddr_btn"
        android:layout_width="@dimen/dimens_100"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimens_16"
        android:background="@color/theme_color"
        android:gravity="center"
        android:text="@string/copy_addr"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimens_32"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/walletaddr_iv_qrcode"
            android:layout_width="180dp"
            android:layout_height="180dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_16"
            android:text="@string/walletaddr_qrcode"
            android:textColor="@color/txt_color_gray"
            android:textSize="@dimen/dimens_12" />
    </LinearLayout>
</LinearLayout>











