<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/item_shape_white"
        android:elevation="@dimen/dimens_2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_20"
            android:layout_marginBottom="@dimen/dimens_16"
            android:text="@string/walletguide_intro_nowallethint"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_size_17"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_10">

            <Button
                android:id="@+id/walletguide_btn_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimens_10"
                android:background="@drawable/item_shape_blue"
                android:padding="@dimen/dimens_4"
                android:text="@string/walletguide_intro_import"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/text_size_14"/>

            <Button
                android:id="@+id/walletguide_btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimens_10"
                android:background="@color/theme_color"
                android:padding="@dimen/dimens_4"
                android:text="@string/walletguide_intro_create"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>